Issue #2599610 by plopesc: Schedule state change radio buttons generate confl...
Issue #2545660: Make action buttons more unique
Issue #2584883: [D8-port task] test all hooks
Issue #2595247: Actions buttons: make code more local
Issue #2600934: PDOException: SQLSTATE[23000]: Integrity constraint violation...
Issue #2351299: Prepare D8-port: move forms in own file.
Issue #2604914: Fatal error: Call to a member function getName() on a non-object
Issue #2595247: Actions buttons: make code more local
Issue #2604968: States help blocked by case switching in workflow_admin_ui_help
Issue #2604246 by skek: Performance optimisation in Workflow::save()
Issue #2605256 by bleedev: Unknown data property field_workflow error when de...
Issue #2285983: Workflows Admin UI Broken on SQLite
Issue #2581909: Change status via VBO
Issue #2605822: Wrong default option when adding an entity with workflow
Issue #2604048: Amend WorkflowTransition::dpm()
Issue #2604246 by skek, danielmrichards: Performance optimisation for Workflo...
Issue #2607150 by aronne: Workflow transitions don't respect configured permi...
Issue #2607198 by heykarthikwithu: Add @return type and change @param values ...
Issue #2363521: Fixed removed scheduled action button in Node View page
Issue #2580543: Fixed warnings when displaying tokens
Issue #318325: Add hook_widget_form_alter to workflow.api.php
Issue #2607998: Warning: array_flip() appears when workflow_block is enabled
Issue #2608128 by Murz: Function workflow_execute_transition() ignores timestamp of Workflow transition
Issue #2608452 by mwidner: Fixed failing primary index in table
Issue #2608996: Error when workflow_block on node page without workflow

Since 7.x-2.6
Issue #2612648: Implement WorkflowInterface
Issue #2611514: Fixed Re-assigning WorkflowField when disabling state
Issue #2612598: Warning: Missing argument n for workflow_notify_workflow()
Issue #2613194: Show field_name in Workflow history tab